--- a/index.css
+++ b/index.css
@@ -257,6 +257,7 @@ footer {
 }
 
 .projects-section-bc-ferries {
+    margin-left: -50rem;
     padding-top: 1rem;
     width: 100%;
     background-image: url(./src/assets/bc_ferries_preview.svg);
@@ -275,6 +276,24 @@ footer {
 
 }
 
+@keyframes slide-in-left {
+    from {
+        margin-left: -50rem;
+    }
+
+    to {
+        margin-left: 0rem;
+    }
+}
+@keyframes slide-in-right {
+    from {
+        margin-left: 50rem;
+    }
+
+    to {
+        margin-left: 0rem;
+    }
+}
 .projects-section-bc-ferries:hover {
     top: -1rem;
     box-shadow: 0px 5px 16px #32228a;
@@ -294,6 +313,7 @@ footer {
 }
 
 .projects-section-portfolio {
+    margin-left: 50rem;
     width: 100%;
     background-image: url(./src/assets/landing_page.svg);
     height: 34rem;
@@ -432,6 +452,10 @@ footer {
     box-shadow: 0px 5px 16px #32228a;
     background-color: rgb(233, 232, 232);
     cursor: pointer;
+}
+
+.bc-ferries-anim-class {
+    opacity: 0;
 }
 
 @media screen and (max-width: 870px) {
