--- a/bc-ferries.css
+++ b/bc-ferries.css
@@ -20,6 +20,7 @@ body {
 }
 
 .text-container {
+    background-color: #fff;
     margin-top: 1rem;
     padding: 1rem 1rem 1rem 1rem;
     border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
@@ -78,6 +79,7 @@ body {
     background-color: #dadada;
     margin-left: -0.5rem;
     border-radius: 2rem 2rem 2rem 2rem;
+    z-index: 20;
 }
 
 #timeline-1 {
@@ -143,4 +145,33 @@ body {
     border-radius: 2rem 2rem 2rem 2rem;
     margin-left: 4rem;
     position: relative;
+    z-index: 10;
+}
+.timeline-s-des{
+    float: right;
+    height: 3.5rem;
+    width: 20rem;
+    background-color: #fff;
+    position: absolute;
+    left: 25rem;
+    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
+    box-shadow: 0px 5px 10px rgb(201, 201, 201);
+    transition: margin-top 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    z-index: 8;
+}
+.timeline-s-des:hover{
+    margin-top: -0.1rem;
+    box-shadow: 0px 5px 16px #32228a;
+}
+.timeline-s-des-b1{
+    margin-top: 2rem;
+    float: right;
+    height: 1rem;
+    width: 28rem;
+    position: absolute;
+    z-index: 0;
+    border-style: solid;
+    border-width: 2px 0px 0px 0px;
+    border-color: #e2e2e2;
+    border-style: dashed;
 }
