--- a/bc-ferries.css
+++ b/bc-ferries.css
@@ -127,18 +127,37 @@ body {
         top: 30rem;
     }
 }
-@keyframes timeline-s-1{
-    from{ padding-bottom: 4rem;}
-    to{padding-bottom: 12rem;}
+
+@keyframes timeline-s-1 {
+    from {
+        padding-bottom: 4rem;
+    }
+
+    to {
+        padding-bottom: 12rem;
+    }
 }
-@keyframes timeline-s-2{
-    from{ padding-bottom: 12rem;}
-    to{padding-bottom: 22rem;}
+
+@keyframes timeline-s-2 {
+    from {
+        padding-bottom: 12rem;
+    }
+
+    to {
+        padding-bottom: 22rem;
+    }
 }
-@keyframes timeline-s-3{
-    from{ padding-bottom: 22rem;}
-    to{padding-bottom: 32rem;}
+
+@keyframes timeline-s-3 {
+    from {
+        padding-bottom: 22rem;
+    }
+
+    to {
+        padding-bottom: 32rem;
+    }
 }
+
 .timeline {
     width: 3rem;
     background-color: #32228a;
@@ -147,7 +166,8 @@ body {
     position: relative;
     z-index: 10;
 }
-.timeline-s-des{
+
+.timeline-s-des {
     float: right;
     height: 3.5rem;
     width: 20rem;
@@ -159,11 +179,13 @@ body {
     transition: margin-top 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     z-index: 8;
 }
-.timeline-s-des:hover{
+
+.timeline-s-des:hover {
     margin-top: -0.1rem;
     box-shadow: 0px 5px 16px #32228a;
 }
-.timeline-s-des-b1{
+
+.timeline-s-des-b1 {
     margin-top: 2rem;
     float: right;
     height: 1rem;
@@ -174,4 +196,60 @@ body {
     border-width: 2px 0px 0px 0px;
     border-color: #e2e2e2;
     border-style: dashed;
+}
+
+@keyframes timeline-2-d-anim {
+    from {
+        margin-top: 0rem;
+    }
+
+    to {
+        margin-top: 10rem;
+    }
+}
+
+@keyframes timeline-3-d-anim {
+    from {
+        margin-top: 10rem;
+    }
+
+    to {
+        margin-top: 20rem;
+    }
+}
+@keyframes timeline-4-d-anim {
+    from {
+        margin-top: 20rem;
+    }
+
+    to {
+        margin-top: 30rem;
+    }
+}
+@keyframes timeline-2-d-p-anim {
+    from {
+        margin-top: 2rem;
+    }
+
+    to {
+        margin-top: 12rem;
+    }
+}
+@keyframes timeline-3-d-p-anim {
+    from {
+        margin-top: 12rem;
+    }
+
+    to {
+        margin-top: 22rem;
+    }
+}
+@keyframes timeline-4-d-p-anim {
+    from {
+        margin-top: 22rem;
+    }
+
+    to {
+        margin-top: 32rem;
+    }
 }
