--- a/bc-ferries.css
+++ b/bc-ferries.css
@@ -265,3 +265,9 @@ body {
     font-weight: bold;
     font-size: 1.6rem;
 }
+.section-descriptions{
+    margin-top: 2rem;
+}
+.left-side{
+    margin-left: 1rem;
+}
