--- a/bc-ferries.css
+++ b/bc-ferries.css
@@ -297,3 +297,15 @@ body {
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
+.coding-img{
+    height: 26rem;
+    background-size: contain;
+    width: 100%;
+    background-repeat: no-repeat;
+    /* margin-left: -4rem;
+    margin-right: -4rem; */
+    z-index: 22;
+    background-image: url(./src/assets/timelinecoding.svg);
+    padding-bottom: 2rem;
+    margin-bottom: 1rem;
+}
