--- a/bc-ferries.css
+++ b/bc-ferries.css
@@ -35,6 +35,9 @@ body {
     top: -0.2rem;
     box-shadow: 0px 5px 16px #32228a;
 }
+.hov:hover{
+    cursor: pointer;
+}
 
 .landing-image-bc-ferries {
     height: 26rem;
@@ -74,6 +77,7 @@ body {
     margin-top: 4rem;
     margin-bottom: 4rem;
     margin-left: 6rem;
+    padding-top: 4rem;
 }
 
 .timeline-init {
