--- a/index.css
+++ b/index.css
@@ -14,7 +14,9 @@ body {
 body {
     overflow-y: hidden;
 }
-
+a{
+text-decoration: none !important;
+}
 .navigation-padding {
     fill: none;
     height: 4rem;
