added isometric safe design

--- a/school-projects.css
+++ b/school-projects.css
@@ -34,7 +34,7 @@ body {
     /* margin-left: -4rem;
     margin-right: -4rem; */
     z-index: 22;
-    background-image: url(./src/assets/portfolio.svg);
+    background-image: url(./src/assets/isometric\ design\ safe.svg);
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
