--- a/school-projects.css
+++ b/school-projects.css
@@ -86,3 +86,18 @@ body {
     margin-top: 2rem;
     margin-right: 2rem;
 }
+.user-trigger-img-top{
+    height: 26rem;
+    background-size: contain;
+    width: 100%;
+    background-repeat: no-repeat;
+    /* margin-left: -4rem;
+    margin-right: -4rem; */
+    z-index: 22;
+    background-image: url(./src/assets/topdown.svg);
+    padding-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+.spacer{
+    height: 6rem;
+}
