updated index.html to link to hootsuite and added the finger food projects page, as well as uploaded the control plus app page

--- a/index.css
+++ b/index.css
@@ -385,7 +385,7 @@ footer {
     margin-left: 50rem;
     opacity: 0;
     width: 100%;
-    background-image: url(./src/assets/arduino_screaming.svg);
+    background-image: url(./src/assets/isometric\ design\ safe.svg);
     height: 34rem;
     background-size: cover;
     width: 100%;
