--- a/finger-food-atg.css
+++ b/finger-food-atg.css
@@ -61,6 +61,21 @@ body {
     border-radius: 8px;
     cursor: pointer !important;
 }
+.button-des-ff{
+    background-color: #ed1b2f;
+    border: none;
+    color: white;
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer !important;
+    margin-block-start: 2rem;
+    margin-block-end: 2rem;
+}
+
 
 .button-space {
     text-align: center;
@@ -68,4 +83,25 @@ body {
 
 .button-des:hover {
     background-color: #7164b9;
+}
+.button-des-ff:hover {
+    background-color: #ff5566;
+}
+.spacer{
+    height: 6rem;
+}
+.left-side{
+    margin-left: 2rem;
+}
+.user-trigger-img-sphero{
+    height: 20rem;
+    background-size: contain;
+    width: 100%;
+    background-repeat: no-repeat;
+    /* margin-left: -4rem;
+    margin-right: -4rem; */
+    z-index: 22;
+    background-image: url(./src/assets/spheroEDU.svg);
+    padding-bottom: 2rem;
+    margin-bottom: 1rem;
 }
