started editing the me.html page

--- a/me.css
+++ b/me.css
@@ -34,7 +34,7 @@ body {
     /* margin-left: -4rem;
     margin-right: -4rem; */
     z-index: 22;
-    background-image: url(./src/assets/isometric\ design\ safe.svg);
+    background-image: url(./src/assets/sammyskate.svg);
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
@@ -110,6 +110,18 @@ body {
     margin-right: -4rem; */
     z-index: 22;
     background-image: url(./src/assets/gangl.svg);
+    padding-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+.user-mountains{
+    height: 1366px;
+    background-size: contain;
+    width: 100%;
+    background-repeat: no-repeat;
+    /* margin-left: -4rem;
+    margin-right: -4rem; */
+    z-index: 22;
+    background-image: url(./src/assets/montainsback.svg);
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
