begain responsive design

--- a/index.css
+++ b/index.css
@@ -67,6 +67,8 @@ h1 {
     .find-out-what-working-on{
         margin-top: 6rem;
         margin-bottom: 4rem;
+        background-color: #fff;
+        mix-blend-mode: difference;
     }
     .spacer{
         height: 4rem;
