attempt to  fix mox-blend-mode bug on chrome mobile and change the text

--- a/index.css
+++ b/index.css
@@ -228,7 +228,9 @@ stringname:hover {
 
 .section-p {
     text-align: center;
-    mix-blend-mode: difference;
+    mix-blend-mode: difference  !important;
+    -webkit-mix-blend-mode: difference;
+    -moz-mix-blend-mode: difference;
     color: #afafaf;
 
 }
