--- a/finger-food-atg.css
+++ b/finger-food-atg.css
@@ -105,3 +105,76 @@ body {
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
+@media screen and (max-width:1100px) {
+    .display-4 {
+        font-size: 2rem !important;
+
+    }
+
+    .display-3 {
+        font-size: 3.5rem !important;
+        margin-left: 2rem !important;
+        margin-right: 2rem !important;
+    }
+}
+
+@media screen and (max-width: 1040px) {
+    .display-3 {
+        font-size: 2rem !important;
+    }
+
+    @media screen and (max-width: 985px) {
+        .display-4 {
+            font-size: 1.2rem !important;
+            margin-left: 2rem !important;
+            margin-right: 2rem !important;
+        }
+
+    }
+}
+
+@media screen and (max-width:450px) {
+    .display-3 {
+        font-size: 1.5rem !important;
+    }
+}
+@media screen and (max-width: 500px){
+    .button-des{
+        width: 18rem;
+    }
+}
+@media screen and (max-width: 353px){
+    .button-des{
+        width: 14rem;
+    }
+}
+@media screen and (max-width: 768px){
+    .text-container{
+        margin-left: 30px;
+        margin-right: 15px;
+    }
+}
+@media screen and (max-width: 768px){
+    .user-trigger-img{
+        height: 25rem;
+    }
+    .user-trigger-img-sphero{
+        height: 25rem;
+    }
+}
+@media screen and (max-width: 500px){
+    .user-trigger-img{
+        height: 18rem;
+    }
+    .user-trigger-img-sphero{
+        height: 18rem;
+    }
+}
+@media screen and (max-width: 400px){
+    .user-trigger-img{
+        height: 14rem;
+    }
+    .user-trigger-img-sphero{
+        height: 14rem;
+    }
+}
