--- a/index.css
+++ b/index.css
@@ -34,20 +34,21 @@ h1 {
     color: #333 !important;
 }
 
-.landing-image {
-    height: 32rem;
-    background-size: contain;
-    width: 100%;
-    background-repeat: no-repeat;
-    /* margin-left: -4rem;
-    margin-right: -4rem; */
-    z-index: 22;
-    background-image: url(./src/assets/sammybiking.svg);
-    padding-bottom: 2rem;
+.sammy-landing-image{
+    height: 30rem;
+    width: auto;
+    margin: 0 auto;
+    display: inline-block;
+}
+.landing-image{
+    text-align: center;
 }
 
 @media screen and (max-width: 1100px) {
     .landing-image {
+        height: 24rem;
+    }
+    .sammy-landing-image{
         height: 24rem;
     }
 }
@@ -56,11 +57,14 @@ h1 {
     .landing-image {
         height: 18rem;
     }
+    .sammy-landing-image{
+        height: 18rem;
+    }
 }
 
 .landing-page-content {
     text-align: center;
-    margin-top: 8rem;
+    margin-top: 1rem;
 }
 
 .find-out-what-working-on {
@@ -73,7 +77,7 @@ h1 {
     .center-content {
         text-align: center;
         margin-left: 15px !important;
-        margin-top: 100px;
+        margin-top: 10px;
 
     }
 }
